c/examples/writing-a-c-compiler-tests/tests/chapter_15/invalid_parse/malformed_array_declarator_2.c
int main(void) {
    // invalid declarator syntax: can't have parenthesized (*) in non-abstract declarator
    int (*)(ptr_to_array[3]) = 0;
    return 0;
}